# DAGFlow

./: Dockerfile  Dockerfile-dev  README.md  pyproject.toml
.devcontainer/: devcontainer.json
dags/: FTSE_today.py  GSPC_best_day.py  hello_world.py
python/: GSPC_best_day.py
